# relayai

./: .gitignore  PUBLISH.md  README.md  pyproject.toml  requirements.txt  setup.py
.gemini/: system.md
.github/workflows/: publish.yml  test.yml
relayai/: __init__.py  auth.py  claude_client.py  cli.py  file_manager.py  gemini_bridge.py  gemini_client.py  pipeline.py  project_scanner.py
